# amaranth-soc

./: pyproject.toml
.github/workflows/: main.yaml
amaranth_soc/: gpio.py
amaranth_soc/csr/: bus.py  reg.py
docs/: conf.py
docs/1/merge/: cover.html  csr.html  genindex.html  gpio.html  index.html  memory.html  objects.inv  py-modindex.html  search.html  searchindex.js  wishbone.html
docs/1/merge/_static/: documentation_options.js
docs/1/merge/csr/: action.html  bus.html  reg.html
docs/1/merge/wishbone/: bus.html
docs/dump-docs/: cover.html  csr.html  genindex.html  gpio.html  index.html  memory.html  objects.inv  py-modindex.html  search.html  wishbone.html
docs/dump-docs/_static/: documentation_options.js
docs/dump-docs/csr/: action.html  bus.html  reg.html
docs/dump-docs/wishbone/: bus.html
docs/main/: cover.html  csr.html  genindex.html  gpio.html  index.html  memory.html  objects.inv  py-modindex.html  search.html  wishbone.html
docs/main/csr/: action.html  bus.html  reg.html
docs/main/wishbone/: bus.html
docs/pinsig-repr/: cover.html  genindex.html  index.html  objects.inv  search.html
docs/reference-docs/: cover.html  gpio.html  index.html  memory.html  search.html
docs/reference-docs-chipflow/: cover.html  csr.html  genindex.html  gpio.html  index.html  memory.html  objects.inv  py-modindex.html  search.html  searchindex.js  wishbone.html
docs/reference-docs-chipflow/_static/: documentation_options.js
docs/reference-docs-chipflow/csr/: action.html  bus.html  reg.html
docs/reference-docs-chipflow/wishbone/: bus.html
docs/reference-docs/_static/: documentation_options.js
docs/reference-docs/csr/: action.html  bus.html  reg.html
docs/reference-docs/wishbone/: bus.html
