# Project metadata

[tool.pdm.version]
source = "scm"

[project]
dynamic = ["version"]

name = "amaranth-soc"
description = "System on Chip toolkit for Amaranth HDL"
authors = [{name = "Amaranth HDL contributors"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.8"
dependencies = [
    # this version requirement needs to be synchronized with the one in .github/workflows/main.yml
    "amaranth>=0.5,<0.6",
    "markdown2>=2.5.1",
]

[project.urls]
"Homepage" = "https://amaranth-lang.org/"
"Documentation" = "https://amaranth-lang.org/docs/amaranth-soc/" # modified in pdm_build.py
"Source Code" = "https://github.com/amaranth-lang/amaranth-soc"
"Bug Tracker" = "https://github.com/amaranth-lang/amaranth-soc/issues"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "coverage",
]
docs = [
  "sphinx~=7.1",
  "sphinxcontrib-yowasp-wavedrom~=1.0",
  "sphinx-rtd-theme~=1.2",
  "sphinx-autobuild",
  "sphinx-markdown-builder>=0.6.7",
  "rst2pdf>=0.102",
]

[tool.pdm.scripts]
test.composite = ["test-code"]
test-code.env = {PYTHONWARNINGS = "error"}
test-code.cmd = "python -m coverage run -m unittest discover -t . -s tests -v"
test-docs.cmd = "sphinx-build -b doctest docs docs/_build"

document.cmd = "sphinx-build docs docs/_build"
document-live.cmd = "sphinx-autobuild docs docs/_build --watch amaranth_soc"
document-md.composite = [
    "sphinx-build -M markdown docs docs/_build",
    "docs/assemble-md.py docs/_build/markdown/index.md docs/amaranth-soc",
    "echo Markdown documentation created at docs/amaranth-soc.md"
    ]
document-pdf.composite = [
    "sphinx-build -b pdf docs docs/_build",
    "cp docs/_build/amaranth-soc.pdf docs",
    "echo PDF documentation created at docs/amaranth-soc.pdf"
]

coverage-text.cmd = "python -m coverage report"
coverage-html.cmd = "python -m coverage html"
